[project]
name = "hsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "spectral>=0.24",
    "torch>=2.10.0",
    "einops>=0.8.0",
    "tqdm>=4.67.3",
]
